--- a/test/index.html
+++ b/test/index.html
@@ -450,7 +450,7 @@
 							<img src="img/s9-1.jpg" alt="item">
 						</div>
 						<input class="pick-item__input" type="radio" name="Подарок" id="step9-1" value="Мойка">
-						<div class="pick-item__label">Мойка из камня<br>(цена отдельно 44 900 тг)</div>
+						<div class="pick-item__label">Мойка из камня</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
